--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "private": true,
     "dependencies": {},
     "devDependencies": {
+        "gulp": "^3.8.1",
+        "browserify": "^4.1.11",
         "grunt": "~0.4.5",
         "grunt-browserify": "~2.1.0"
     }
