--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "flexboard",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "A fully-customizable dashboard implemented using flexbox",
     "repository": {
         "type": "git",
@@ -9,10 +9,8 @@
     "private": true,
     "dependencies": {},
     "devDependencies": {
-        "gulp": "^3.8.1",
-        "browserify": "^4.1.11",
-        "watchify": "^0.10.2",
-        "grunt": "~0.4.5",
-        "grunt-browserify": "~2.1.0"
+        "gulp": "^3.9.0",
+        "browserify": "^10.2.6",
+        "watchify": "^3.2.3"
     }
 }
